Add repoList attribute, refactor changeRepo() to use loadConfig() and updateConfig()